--- a/style.css
+++ b/style.css
@@ -1,35 +1,33 @@
-/* font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Tenor Sans', sans-serif; */
+/* font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Urbanist', sans-serif; */
 
 .container {
+    display: flex;
     width: 100%;
 }
 
 
 /* Header */
-.container p {
-    display: inline-block;
-    /* margin-right: 40px; */
-    
-
-    color: #000;
-    font-family: 'Tenor Sans', sans-serif;
+.header-text {
+    color: black;
+    font-family: 'Urbanist', sans-serif;
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 };
-/* .container:last-of-type{
-    float: right;
-} */
 
 
 /* about me */
+.about_me {
+    float: right;
+};
+
 .title {
-    color: #000;
+    color: red;
     text-align: right;
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 34px;
     font-style: normal;
     font-weight: 400;
@@ -40,7 +38,7 @@ font-family: 'Tenor Sans', sans-serif; */
 .subtitle {
     color: #000;
     text-align: right;
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
@@ -50,7 +48,6 @@ font-family: 'Tenor Sans', sans-serif; */
 
 .goal-text {
     color: #000;
-    /* text-align: right; */
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     font-style: normal;
@@ -58,10 +55,22 @@ font-family: 'Tenor Sans', sans-serif; */
     line-height: 18px;
 };
 
+/* main */
+.vertical-line {
+    width: 5px;
+    height: 404px;
+    background-color: black;
+    margin: 0 auto;
+};
+
+.ed_and_qualities{
+    float: right;
+};
+
 .main-subtitle {
     color: #000;
     text-align: right;
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -72,7 +81,7 @@ font-family: 'Tenor Sans', sans-serif; */
 .main-subtitle-normal {
     color: #000;
     text-align: right;
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -81,27 +90,28 @@ font-family: 'Tenor Sans', sans-serif; */
 
 .main-text {
     color: #000;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 25px;
 };
 
-.main-text:nth-of-type(2) {
+/* .main-text:nth-of-type(2) {
     color: #000;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
-};
+}; */
 
 .footer-text {
     color: #000;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Urbanist', sans-serif;
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 12px;
-}
+};
+
